# pyrandyos

./: .cspell.jsonc  .env  .gitignore  .pyapp_config.jsonc  .pyrandyos_config.jsonc  add_log_func_call_decorators.py  build-docs.bat  log_func_call_exclude.json  log_func_call_exclude.jsonc  pyapp.code-workspace  pyproject.toml  pyrandyos.code-workspace  readme.md  update_git_hooks.py  update_version.sh
.github/workflows/: ci.yml  publish.yml
pyapp/: __init__.py  __main__.py  app.py  logging.py  version.py
pyapp/_testing/: __init__.py  _pyapp_testing.py  debug.py
pyapp/config/: __init__.py  app.py  defaults.py  expandutils.py  keys.py  local.py
pyapp/gui/: __init__.py  callback.py  gui_app.py  loadstatus.py  qrc.py  qt.py  splash.py  utils.py
pyapp/gui/icons/: update_from_spec.py
pyapp/gui/themes/: __init__.py  styles.py
pyapp/qt_gui/: loadstatus.py  qrc.py  utils.py
pyapp/tools/: .log_func_call_exclude.jsonc  add_log_func_call_decorators.py
pyapp/utils/: casesafe.py  cfgdict.py  cli.py  expandvars.py  filemeta.py  git.py  json.py  log.py  logging.py  main.py  math.py  net.py  notebook.py  paths.py  signature_wrapper.py  sqlite.py  stack.py  string.py  system.py  tqdm.py
pyrandyos/: _version.py  app.py  version.py
pyrandyos/config/: defaults.py  keys.py
pyrandyos/gui/: audio.py  qt.py
pyrandyos/tools/: .log_func_call_exclude.jsonc  add_log_func_call_decorators.py
pyrandyos/utils/: expandvars.py  fileio.py  git.py  sqlite.py  stack.py
tests/: pyapp_test.py  pyrandyos_test.py
tools/: add_log_func_call_decorators.py  log_func_call_exclude.jsonc
(+70 files in other folders)
